Created Home Page

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Potta+One&display=swap"
+      rel="stylesheet"
+    />
     <title>Diaries App</title>
   </head>
   <body>
